Fix positioning bug where navbar was over forms on small screens

--- a/src/styles/Movie.module.css
+++ b/src/styles/Movie.module.css
@@ -1,6 +1,6 @@
 .Post {
   border: 1px inset black;
-  max-width: 20em;
+  max-width: 19em;
 }
 
 .Anchor figure img {
@@ -8,7 +8,7 @@
   filter: grayscale(0) blur(0);
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  height: 32em;
+  height: 30em;
 }
 
 .Anchor:hover figure img {
